# kinetica-api-python

./: CHANGELOG-FUNCTIONS.md  CHANGELOG.md  GIT_BRANCH.txt  LICENSE  MANIFEST.in  README  README.md  VERSION  pyproject.toml  setup.py
example/: example.py  example_multihead_ingest.py  gpudb
examples/: example.py  gpudb_async_dbapi_example.py  gpudb_cmd.py  gpudb_dbapi_example.py  gpudb_diagnostics.py  gpudb_insert_datetime_example.py  gpudb_insert_multi_head_example.py  gpudb_insert_update_delete_example.py  gpudb_record_retriever_example.py  gpudb_sql_context_example.py  ray_data_load_example.py  table_monitor_example.py  table_monitor_example_basic_first.py  table_monitor_example_basic_second.py  table_monitor_example_default_impl.py  table_monitor_example_queued_impl.py  udfsim.py
examples/table-monitor/: README.md  driver.py  tmonitor.py
gpudb/: VERSION  __init__.py  gpudb.py  gpudb_cmd.py  gpudb_dataframe.py  gpudb_diagnostics.py  gpudb_file_handler.py  gpudb_ingestor.py  gpudb_multihead_io.py  gpudb_sql_context.py  gpudb_sql_iterator.py  gpudb_table_monitor.py  test_ingest.py  udfsim.py  user_agent.py
gpudb/dbapi/: __init__.py  requirements.txt  setup.py
gpudb/dbapi/aio/: __init__.py  connection.py  cursor.py  utils.py
gpudb/dbapi/core/: __init__.py  connection.py  cursor.py  exceptions.py  types.py  utils.py
gpudb/dbapi/pep249/: __init__.py  connection.py  cursor.py  exceptions.py  extensions.py  transactions.py  type_constructors.py  types.py
gpudb/dbapi/pep249/aiopep249/: __init__.py  connection.py  cursor.py  exceptions.py  extensions.py  transactions.py  type_constructors.py  types.py
protocol/: avro.c  avro.h  bufferrange.c  bufferrange.h  common.c  common.h  dt.c  dt.h  platform.h  protocol.c  protocol.h  record.c  record.h  schema.c  schema.h
